--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-vue": "^7.5.0"
+    "eslint-plugin-vue": "^7.5.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7"
   }
 }
