--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "author": "Pascal Godbille",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mariadb": "^2.5.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0",
+    "sequelize-auto": "^0.7.10"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
@@ -19,7 +26,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-vue": "^7.5.0",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
 }
