--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0",
-    "sequelize-auto": "^0.7.10"
+    "sequelize-auto": "^0.7.10",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
