--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     ],
     "rules": {
         "semi": ["error", "always",{ "omitLastInOneLineBlock": true}],
-        "no-useless-escape": ["off"]
+        "no-useless-escape": ["off"],
+        "camelcase": ["off"]
     }
 }
