--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eslint": "eslint **/*.js --fix",
     "migratedb":"npx sequelize-cli db:migrate",
     "migrateundodb":"npx sequelize-cli db:migrate:undo:all",
-    "seedAll": "npx sequelize-cli db:seed:all"
+    "seedAll": "npx sequelize-cli db:seed:all",
+    "undoseed":"npx sequelize-cli db:seed:undo:all"
   },
   "author": "Pascal Godbille",
   "license": "ISC",
