--- a/config/config.json
+++ b/config/config.json
@@ -8,9 +8,9 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "password": "3T53f3eXe995SgmnLhCF",
+    "database": "groupomania_p7",
+    "host": "mysql-groupomania.alwaysdata.net",
     "dialect": "mysql"
   },
   "production": {
