--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-status": "^1.5.0",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.2",
     "morgan": "^1.10.0",
