--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "http-status": "^1.5.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
